--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,5 +1,6 @@
 .form {
-  max-width: 358px;
+  width: 90%;
+  max-width: 510px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -11,24 +12,22 @@
   width: 100%;
   min-height: 35px;
   box-sizing: border-box;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-radius: 4px;
   margin-bottom: 30px;
   font-size: 14px;
   line-height: 1.21;
-}
-  
-.input:focus {
-  outline-color: #7178e4;
 }
 
 .form__button {
   max-width: 100px;
   width: 100%;
   height: 35px;
-  border-radius: 2px;
+  border-radius: 5px;
   background-color: rgb(50, 35, 35);
+  border: none;
   color: #fff;
   font-size: 18px;
+  font-weight: 700;
   line-height: 1.21;
   cursor: pointer;
   opacity: 1;
